- fix for bubbles and z-index

--- a/public/css/bubbles2.css
+++ b/public/css/bubbles2.css
@@ -5,21 +5,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
+  /* right: 0; */
   z-index: 0;
-}
-.wrapper h1 {
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  position: absolute;
-  font-family: sans-serif;
-  letter-spacing: 1px;
-  word-spacing: 2px;
-  color: #fff;
-  font-size: 40px;
-  font-weight: 888;
-  text-transform: uppercase;
 }
 .wrapper div {
   height: 60px;
@@ -29,6 +16,7 @@
   position: absolute;
   top: 10%;
   left: 10%;
+  z-index: 1;
   animation: 4s linear infinite;
 }
 div .dot {
@@ -36,12 +24,13 @@ div .dot {
   width: 10px;
   border-radius: 50px;
   position: absolute;
+  z-index: 1;
   top: 20%;
   right: 20%;
 }
 .wrapper div {
   /* background-color: blue; */
-  z-index: -10;
+  /* z-index: -10; */
 }
 .wrapper .dotdiv-1 {
   top: 20%;
